# lidar-data-viewer

./: .gitignore  CONTRIBUTING.rst  LICENSE  README.md  README.rst  requirements.txt  setup.cfg
bundles/desktop/: README.md  run.py
bundles/docker/: README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
examples/jupyter/: show.ipynb
lidar_data_viewer/: core.py  main.py
lidar_data_viewer/app/: core.py  main.py  tutorial.py  viz_test.py  vtk_generation.py
setup/: apps.yml  requirements.txt
