[metadata]
name = lidar-data-viewer
version = 1.0.0
description = An application for viewing and transforming satelite lidar data
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Andrew Przyjemski
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    # vtk
    # pandas
    # numpy
    # altair
    # mpld3
    # plotly
    # pydeck

[options.entry_points]
console_scripts =
    lidar-data-viewer = lidar_data_viewer.app:main
jupyter_serverproxy_servers =
    lidar-data-viewer = lidar_data_viewer.app.jupyter:jupyter_proxy_info
